# api/api_roles_etcd.go
@@ -256,6 +256,112 @@ func (a *RolesEtcdAPIService) EtcdJoinMemberExecute(r ApiEtcdJoinMemberRequest) 
 	return localVarReturnValue, localVarHTTPResponse, nil
 }
 
+type ApiEtcdMoveLeaderRequest struct {
+	ctx        context.Context
+	ApiService *RolesEtcdAPIService
+	peerID     *string
+}
+
+func (r ApiEtcdMoveLeaderRequest) PeerID(peerID string) ApiEtcdMoveLeaderRequest {
+	r.peerID = &peerID
+	return r
+}
+
+func (r ApiEtcdMoveLeaderRequest) Execute() (*http.Response, error) {
+	return r.ApiService.EtcdMoveLeaderExecute(r)
+}
+
+/*
+EtcdMoveLeader Etcd move leader
+
+	@param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+	@return ApiEtcdMoveLeaderRequest
+*/
+func (a *RolesEtcdAPIService) EtcdMoveLeader(ctx context.Context) ApiEtcdMoveLeaderRequest {
+	return ApiEtcdMoveLeaderRequest{
+		ApiService: a,
+		ctx:        ctx,
+	}
+}
+
+// Execute executes the request
+func (a *RolesEtcdAPIService) EtcdMoveLeaderExecute(r ApiEtcdMoveLeaderRequest) (*http.Response, error) {
+	var (
+		localVarHTTPMethod = http.MethodPost
+		localVarPostBody   interface{}
+		formFiles          []formFile
+	)
+
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "RolesEtcdAPIService.EtcdMoveLeader")
+	if err != nil {
+		return nil, &GenericOpenAPIError{error: err.Error()}
+	}
+
+	localVarPath := localBasePath + "/api/v1/etcd/move_leader"
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+	if r.peerID == nil {
+		return nil, reportError("peerID is required and must be specified")
+	}
+
+	parameterAddToHeaderOrQuery(localVarQueryParams, "peerID", r.peerID, "form", "")
+	// to determine the Content-Type header
+	localVarHTTPContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHTTPContentType := selectHeaderContentType(localVarHTTPContentTypes)
+	if localVarHTTPContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHTTPContentType
+	}
+
+	// to determine the Accept header
+	localVarHTTPHeaderAccepts := []string{"application/json"}
+
+	// set Accept header
+	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
+	if localVarHTTPHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
+	}
+	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
+	if err != nil {
+		return nil, err
+	}
+
+	localVarHTTPResponse, err := a.client.callAPI(req)
+	if err != nil || localVarHTTPResponse == nil {
+		return localVarHTTPResponse, err
+	}
+
+	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
+	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
+	if err != nil {
+		return localVarHTTPResponse, err
+	}
+
+	if localVarHTTPResponse.StatusCode >= 300 {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: localVarHTTPResponse.Status,
+		}
+		if localVarHTTPResponse.StatusCode == 500 {
+			var v RestErrResponse
+			err = a.client.decode(&v, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+			if err != nil {
+				newErr.error = err.Error()
+				return localVarHTTPResponse, newErr
+			}
+			newErr.error = formatErrorMessage(localVarHTTPResponse.Status, &v)
+			newErr.model = v
+		}
+		return localVarHTTPResponse, newErr
+	}
+
+	return localVarHTTPResponse, nil
+}
+
 type ApiEtcdRemoveMemberRequest struct {
 	ctx        context.Context
 	ApiService *RolesEtcdAPIService
